--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 @import '../../variables';
 
 .page{
-  @apply w-full min-h-screen  flex justify-center items-center;
+    @apply w-full h-full flex justify-center items-center border-blue-500 ;
 }
 
 .main-card{
